Fix checkbox alignment via ::ng-deep .mdc-list-item__start

--- a/todo-angular/src/app/app.css
+++ b/todo-angular/src/app/app.css
@@ -81,6 +81,10 @@
   animation: fadeIn 0.2s ease;
 }
 
+.todo-item ::ng-deep .mdc-list-item__start {
+  align-self: center;
+}
+
 .todo-item [matListItemIcon] {
   align-self: center;
 }
